# ventoy-ng-cpio

./: .gitignore  .gitmodules  Justfile  README.md  TODO.md  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ruff.yml
docker/: Dockerfile
project/: components.lst  project.toml
project/components/: arch-ramdisks.toml  base.toml  main.toml
project/components/arch/: arch-ramdisks.toml  rd-stage1-tools.toml  rd-stage1.toml  rd-stage2-tools.toml  rd-stage2.toml
project/components/arch/tools/: libfuse2.toml  (+11 more)
project/extras/busybox/: 01-defconfig-static.config  01-static.config  02-noshells.config  03-hexdump.config  03-xzcat-only.config  04-ash-internal-glob.config  04-hexdump-lfs.config  04-xzcat-lfs.config
project/extras/busybox-ash/: 00-allnoconfig.config  02-ash-only.config  03-ash-extras.config  04-ash-lfs.config
project/extras/busybox-full/: 00-defconfig.config  02-custom-static.config
project/extras/squashfs/: 0001-fix-typo-in-sort-priority-range.patch  0002-feat-stub-out-compressors-to-save-size.patch  0003-feat-ventoy-specific-changes.patch
project/extras/vtoytool/: Makefile
project/extras/xz-embedded/: Makefile
project/sources/: busybox.toml  device-mapper.toml  libfuse2.toml  lunzip.toml  lz4.toml  lzo.toml  smallz4.toml  squashfs.toml  vblade.toml  vtchmod.toml  vtoy_fuse_iso.toml  vtoytool.toml  xz-embedded.toml  xz.toml  zlib.toml  zstd.toml
project/targets/output/: 00-x86.toml  10-arm64.toml  20-mips64.toml
project/targets/system/: 00-x86_64.toml  01-i386.toml  10-aarch64.toml  20-mips64el.toml
src/ventoy_ng_cpio/: __init__.py  __main__.py  config.py  consts.py  main.py  paths.py  project.py  schema.py
src/ventoy_ng_cpio/builders/: __init__.py  arch_ramdisks.py  busybox.py  device_mapper.py  lunzip.py  lz4.py  lzo.py  smallz4.py  squashfs.py  vblade.py  xz.py  xz_embedded.py  xzminidec.py  zlib.py  zstd.py
src/ventoy_ng_cpio/builders_abc/: build.py  cmake.py  configure.py  copier.py  cpio.py  make.py
src/ventoy_ng_cpio/buildutils/: base_run.py  cc.py  cmake.py  configure.py  cpio.py  make.py  strip.py  xz.py
src/ventoy_ng_cpio/paths/: build.py  project.py  sources.py
src/ventoy_ng_cpio/project/: components.py  info.py  jobs.py  project.py  targets.py
src/ventoy_ng_cpio/projectv2/: components.py  info.py  jobs.py  project.py  targets.py
src/ventoy_ng_cpio/runtime/: build.py  prepare.py
src/ventoy_ng_cpio/schemas/: components.py  sources.py  targets.py
src/ventoy_ng_cpio/stages/: build.py  prepare.py
src/ventoy_ng_cpio/utils/: build.py  flatten.py  path.py  process.py  singleton.py  string.py  stringifyable.py
(+50 files in other folders)
