[project]
name = "ventoy-ng-cpio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "fnrir", email = "fnr1r0@protonmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mashumaro>=3.16",
    "toml>=0.10.2",
    "tomli>=2.2.1",
    "tomli-w>=1.2.0",
    "typing-extensions>=4.14.1",
    "zstd>=1.5.7.2",
]

[project.scripts]
ventoy-ng-cpio = "ventoy_ng_cpio:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
