[project]
name = "ventoy-ng-cpio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "fnrir", email = "fnr1r0@protonmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mashumaro>=3.16",
    "toml>=0.10.2",
    "tomli>=2.2.1",
    "tomli-w>=1.2.0",
    "typing-extensions>=4.14.1",
    "zstd>=1.5.7.2",
]

[project.scripts]
ventoy-ng-cpio = "ventoy_ng_cpio:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "flake8-2020>=1.8.1",
    "flake8-breakpoint>=1.1.0",
    "flake8-bugbear>=24.12.12",
    "flake8-builtins>=2.5.0",
    "flake8-commas>=4.0.0",
    "flake8-comments>=0.1.2",
    "flake8-eradicate>=1.5.0",
    "flake8-executable>=2.1.3",
    "flake8-fixme>=1.1.1",
    "flake8-isort>=6.1.2",
    "flake8-raise>=0.0.5",
    "flake8-simplify>=0.22.0",
    "flake8-super>=0.1.3",
    "isort>=6.0.1",
    "mypy>=1.17.0",
    "pylint>=3.3.7",
    "types-toml>=0.10.8.20240310",
    "types-zstd>=1.5.7.1.20250708",
]

[tool.isort]
include_trailing_comma = true
multi_line_output = "VERTICAL_GRID_GROUPED"

[tool.mypy]
check_untyped_defs = true
mypy_path = "typings"
